docs: missing headers

--- a/pack-catalog/1.19.md
+++ b/pack-catalog/1.19.md
@@ -136,16 +136,16 @@ Adding more structures into the overworld adds a lot of character and exploratio
 
 > Be weary of adding too many as they can either add too much noise, or cause some structures to never appear!
 
-## [ChoiceTheorem's Overhauled Villagers](https://www.planetminecraft.com/data-pack/choicetheorem-s-overhauled-villages-for-1-19/)
+### [ChoiceTheorem's Overhauled Villagers](https://www.planetminecraft.com/data-pack/choicetheorem-s-overhauled-villages-for-1-19/)
 I love adding new villagers to my world as it provides so much extra value for the underappreciated biomes in the world. It's the easiest early-game structure to entice newer players to explore your world. They also make for more engaging raids.
 
-## [Towns & Towers](https://www.planetminecraft.com/data-pack/towns-amp-towers-structure-overhaul/)
+### [Towns & Towers](https://www.planetminecraft.com/data-pack/towns-amp-towers-structure-overhaul/)
 Similarly to above, this pack goes further and adds other related overworld structures to spice things up. The creator of this pack, Kubek, has does an amazing job maintaining a large set of structures which has evolved at the same rate as worldgen in Minecraft.
 
-## [Wabi Sabi](https://www.curseforge.com/minecraft/texture-packs/wabi-sabi-structures-datapack)
+### [Wabi Sabi](https://www.curseforge.com/minecraft/texture-packs/wabi-sabi-structures-datapack)
 Very new pack which looked quite interesting; don't know much about this one.
 
-## [Immersive Structures](https://www.planetminecraft.com/data-pack/immersive-structure-additional-structures-pack/)
+### [Immersive Structures](https://www.planetminecraft.com/data-pack/immersive-structure-additional-structures-pack/)
 Another ChoiceTheorem pack with odds and ends implemented; generally adding more character to my world.
 
 # Honerable Mentions
