--- a/pack-catalog/1.19.md
+++ b/pack-catalog/1.19.md
@@ -86,7 +86,7 @@ This is the largest designed system within gm4. Allows you to customize your wea
 ## Key Worldgen
 These packs are key for how I change the *base* of my world. Stardust Labs just takes the cake for everything here.
 
-> **Note**: I'm on the Stardust team and have worked on some of these packs listed.
+> **Note**: I'm on the Stardust team.
 
 ### [Terralith](https://www.planetminecraft.com/data-pack/terralith-overworld-evolved-100-biomes-caves-and-more/)
 I honestly don't think I can go back to normal vanilla worlds after playing with this. I highly prefer the upgraded biomes and terrain that terralith offers. Starmute does an amazing job with design and direction here. It's nice that this works so nicely with florcraft essence generation as well.
@@ -120,6 +120,8 @@ While this pack adds some easier teleporting concepts to an early game, it's ver
 ### [VanillaTweaks](https://vanillatweaks.net/)
 My go to place for smaller tweaks and additions to the game. I also regularly enjoy most of their resource packs. Take a look at my list:
 
+> **Note**: I'm currently on the VanillaTweaks team.
+
 - **Confetti Creepers**: Random confetti explosions. I usually set this to 50% chance.
 - **Elevators**: Simple elevators with ender pearls and wool. I like this for base design.
 - **Graves**: The most well-made grave pack. Makes dieing less frustrating as your items stay put.
@@ -127,8 +129,6 @@ My go to place for smaller tweaks and additions to the game. I also regularly en
 - **Fast Leave Decay**: I prefer only this to keeping a pack like Timber, etc
     - Other packs generally add a tree-feller ability through the progression tree
 - **Double Shulker Shell Drops**: Just avoids people not finding end cities
-
-> **Note**: I'm currently on the VanillaTweaks team.
 
 
 ## Other Structures
