docs(pack-catalog): added new packs

--- a/pack-catalog/1.19.md
+++ b/pack-catalog/1.19.md
@@ -154,3 +154,11 @@ I couldn't get to everything so here's an unorganized list of what I missed..
 ### [Incendium](https://www.planetminecraft.com/data-pack/incendium-nether-expansion/)
 
 The first pack that truely showcased the extent of Minecraft's new worldgen, complete with custom items, mobs, and a boss to go with it. I've *personally* worked on this pack to extend and optimize of it's features so it will always have a place in my heart. While some of the items and design can be a bit of out scope for the overall progression of your world, it has a certain charm which I'll always appreciate. Definitely considering dropping this in later (with a nether reset).
+
+### [Manic](https://smithed.dev/packs/hinge/manic)
+
+This pack adds a very fleshed out insanity mechanic and contains some pretty awesome animated mobs and bosses to go with it. I haven't played with this yet, but I plan on adding it to my world.
+
+### [Sanguine](https://smithed.dev/packs/hinge/sanguine)
+
+This pack adds very fleshed out blood moons which visually tint your screen and adds a ton of scary mobs to handle. It also increases the difficulty the longer you've hung out in a world which may be a good or bad thing! Haven't played with it yet as well.
