gists: update 1.19.md

--- a/pack-catalog/1.19.md
+++ b/pack-catalog/1.19.md
@@ -16,7 +16,7 @@ I've never actually played with this pack before but it's been around for a *hot
 - Adds automation tools for several tasks (can be a bit much for some things)
 
 ### [Florcraft](https://www.planetminecraft.com/data-pack/florcraft-magical-essence-wizardry/)
-Probably one of my favorite packs of all time, now with upgraded textures. Balances magic and tech (in a completely different way than Botany) to allow you to construct really cool systems that make your base feel alive.
+Probably one of my favorite packs of all time, now with upgraded textures. Balances magic and tech (in a completely different way than Botania) to allow you to construct really cool systems that make your base feel alive.
 
 - Adds really cute fairies (well wisps) to your world which are fun to gather
 - Incentivizes good planning and designing in order to allow for further snowballing
@@ -26,13 +26,12 @@ Probably one of my favorite packs of all time, now with upgraded textures. Balan
 - Super rewarding once mastered!
 
 ### [The Creeper's Code](https://github.com/CreeperMagnet/the-creepers-code)
-The go-to pack for all things Vanilla+. I usually plop this into most world since it has a ton of small QOL changes I enjoy alongside with nice extensiosn to vanilla such as boomerangs, better/enabled bundles, and more.
+The go-to pack for all things Vanilla+. I usually plop this into most world since it has a ton of small QOL changes I enjoy alongside with nice extensions to vanilla such as boomerangs, better/enabled bundles, and more.
 
 - Contains a large list of QOL changes which are generally welcomed
 - All more in-depth features (mini-bosses, jewelry) are well-designed and contained
 - Works really well with other extensive packs as a supportive pack
 - Enjoyable texturing work which meld with the vanilla textures
-
 
 ### [Gamemode 4](https://gm4.co)
 These collection of packs are the data packs (and command blocks) I've used the longest. Requiring *no* resource pack, these packs are designed as a set of modules which define everything from small tweaks to large systems. These generally stem from vanilla+ to vanilla-adjacient but are generally unique enough to never clash with a modded-esque system. For this section, I'll list the modules I generally play with!
@@ -46,6 +45,7 @@ These collection of packs are the data packs (and command blocks) I've used the 
   - **Potion Liquids**: Lets u store potions in tanks
 - **Smelteries**: Multiply your ores
 - **Relocators**: Relocate anything in this section
+- **Ender Hoppers**: Fancy hoppers
 
 #### Zauber
 - **Zauber Cauldrons**
@@ -70,7 +70,6 @@ This is the largest designed system within gm4. Allows you to customize your wea
   - Adds a soul collecting aspect
   - I haven't fully explored this yet
 
-
 #### Transporation
 - **Vertical Rails**: Lets you use ladders as a vertical rail
 - **Ziprails**: Make ziplines w/ zipwires for rails
@@ -80,8 +79,13 @@ This is the largest designed system within gm4. Allows you to customize your wea
 - **Apple Trees**: Special apple dropping trees
 - **Cozy Campfires**: Sit next to campfire for Absorption
 - **End Fishing**: Fish cool stuff from the End Void
+- **Mob Curing**: Expands the vanilla curing mechanics to other mobs
+- **Lightning in a Bottle**: Allows you to bottle lightning by attaching a lightning rod to a brewing stand
+- **Sunken Treasure**: Search sands for treasure (loot table currently collides w/ other packs)
+- **Dripleaf Filters**: Really interesting sorting mechanism involving dripleaves
 - **Mysterious Midnights**: Some midnights can result in special blood moons
   - **Midnight Menaces**: Adds harder events to blood moons
+
 
 ## Key Worldgen
 These packs are key for how I change the *base* of my world. Stardust Labs just takes the cake for everything here.
@@ -112,7 +116,7 @@ This is a newer pack which I haven't played with at all. Looks very well themed 
 - New items are based off of enemies you encouter, nice progression tree
 
 ### [Explorer's Advent](https://smithed.dev/packs/jachro/epa)
-I don't know much about this pack yet, but I've gotten a couple maps. *Will add more later*.
+This is an exploration and mystical pack early in it's development. I've only explored one dungeon (most spawn very far away) but have retrieved some unknown custom tomes.
 
 ### [Warp Pads](https://github.com/SmoochyPit/Warp-Pads-Rewrite)
 While this pack adds some easier teleporting concepts to an early game, it's very well made making teleporting pretty fun and seemless w/o introducing a non-sensical UI. I recommend this for more casual servers where you just want to stay connected with friends.
@@ -143,10 +147,17 @@ I love adding new villagers to my world as it provides so much extra value for t
 Similarly to above, this pack goes further and adds other related overworld structures to spice things up. The creator of this pack, Kubek, has does an amazing job maintaining a large set of structures which has evolved at the same rate as worldgen in Minecraft.
 
 ### [Wabi Sabi](https://www.curseforge.com/minecraft/texture-packs/wabi-sabi-structures-datapack)
-Very new pack which looked quite interesting; don't know much about this one.
+Very new pack which looked quite interesting; So far the strucutres have been interesting to explore and add a ton of flavor to the world.
+
+### [When Dungeons Arise](https://www.planetminecraft.com/data-pack/when-dungeons-arise-1-19-datapack/)
+This is a data pack created from a mod. These structures are massive and filled with loot and content. I use the mod version for this one!
 
 ### [Immersive Structures](https://www.planetminecraft.com/data-pack/immersive-structure-additional-structures-pack/)
 Another ChoiceTheorem pack with odds and ends implemented; generally adding more character to my world.
+
+### Better Ocean Ruins *and* Pillager Strongholds
+Random singular structure packs I found on PMC.
+
 
 # Honerable Mentions
 I couldn't get to everything so here's an unorganized list of what I missed..
